<resources>
    <string name="app_name">Playlist Market</string>
    <string name="hello_text">Привет, практикум!</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="medialibrary">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="Black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="link_to_course">https://practicum.yandex.ru/android-developer</string>
    <string name="message_to_developers_playlistmaker_app">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thank_message_to_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_email">gudsanta66@gmail.com</string>
    <string name="link_to_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_app_message">Нет подходящего приложения на устройстве</string>
    <string name="track_artist">Исполнитель</string>
    <string name="track_time">0:00</string>
    <string name="track_name">Название песни</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="download_fail">Загрузка не удалась.</string>
    <string name="you_finded_text">Вы искали</string>
    <string name="clear_history_text">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration_value">0:00</string>
    <string name="album_value">Название альбома</string>
    <string name="media_library">Медиатека</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists_created">Вы не создали ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="description">Описание</string>
    <string name="title">Название*</string>
    <string name="create">Создать</string>
    <string name="playlist_title">Название плейлиста</string>
    <string name="tracksCount">Количество треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="the_track_has_already_been_added_to_the_playlist">Трек уже добавлен в плейлист [ %1$s ]</string>
    <string name="added_to_playlist">Добавлено в плейлист [ %1$s ]</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="playlist_doesnt_have_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete_track">Удалить трек</string>
    <string name="do_you_want_delete_track">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="do_you_want_delete_playlist">Хотите удалить плейлист?</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="All_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_saved">Плейлист [ %1$s ] сохранён</string>
    <string name="there_are_no_tracks_in_this_playlist">В этом плейлисте нет треков</string>
    <string name="the_playlist_has_been_created">Плейлист %1$s создан</string>
</resources>