<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_search_background_color"
    android:paddingStart="@dimen/padding_16dp"
    android:paddingEnd="12dp">


    <TextView
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_14dp"
        android:text="@string/settings"
        android:textColor="@color/text_day_night_color"
        tools:ignore="RtlSymmetry" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:gravity="end">

        <TextView
            style="@style/TextOnSettingsActivityStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Black_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitch"
            style="@style/SwitcherStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonShareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_text_in_settings"
        android:gravity="end">

        <TextView
            style="@style/TextOnSettingsActivityStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/buttonShareAppIcon"
            style="@style/IconsStyle"
            android:src="@drawable/share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_text_in_settings"
        android:gravity="end">

        <TextView
            style="@style/TextOnSettingsActivityStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write_to_support" />

        <ImageView
            style="@style/IconsStyle"
            android:src="@drawable/support" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonUserAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_text_in_settings"
        android:gravity="end">

        <TextView
            style="@style/TextOnSettingsActivityStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/IconsStyle"
            android:src="@drawable/arrow_forward" />

    </LinearLayout>
</LinearLayout>
