<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_16dp"
    android:paddingEnd="12dp"
    android:background="@color/white"

    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp">

        <ImageButton
            android:id="@+id/backImageButton"
            android:layout_width="@dimen/iconsize"
            android:layout_height="@dimen/iconsize"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTintMode="screen"
            android:src="@drawable/arrowback"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/textInButtonAndInTitleSize"
            android:textColor="@color/yp_black"
            android:textStyle="bold"
            android:paddingStart="24dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:gravity="end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Black_theme"
            android:textSize="@dimen/size_text_in_settings_menu"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_text_in_settings"
        android:gravity="end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_in_settings_menu" />

        <ImageButton
            android:layout_width="@dimen/iconsize"
            android:layout_height="@dimen/iconsize"
            android:backgroundTintMode="screen"
            android:src="@drawable/share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_text_in_settings"
        android:gravity="end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_in_settings_menu" />

        <ImageButton
            android:layout_width="@dimen/iconsize"
            android:layout_height="@dimen/iconsize"
            android:backgroundTintMode="screen"
            android:src="@drawable/support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_text_in_settings"
        android:gravity="end">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_in_settings_menu" />

        <ImageButton
            android:layout_width="@dimen/iconsize"
            android:layout_height="@dimen/iconsize"
            android:backgroundTintMode="screen"
            android:src="@drawable/arrow_forward" />

    </LinearLayout>
</LinearLayout>
