<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.PlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_24dp"/>

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="@dimen/_24dp"
        android:layout_height="@dimen/_24dp"
        android:layout_marginTop="@dimen/padding_14dp"
        android:layout_marginStart="@dimen/padding_16dp"
        android:src="@drawable/arrowback"
        android:background="@color/settings_search_background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_day_night_color" />


    <ImageView
        android:id="@+id/album_imageView"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_24dp"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        tools:src="@drawable/placeholder_album_in_player" />

    <TextView
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12dp"
        android:textColor="@color/text_day_night_color"
        android:textSize="@dimen/_22sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/artistName"
        tools:text="@string/track_name"/>

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:textColor="@color/text_day_night_color"
        android:textSize="@dimen/_14sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        tools:text="@string/track_artist"/>

    <ImageButton
        android:id="@+id/add_to_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_to_playlist"
        android:background="@color/settings_search_background_color"
        android:layout_marginBottom="@dimen/_29dp"
        app:layout_constraintBottom_toTopOf="@id/time_fragment_textview"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4dp"
        android:background="@color/settings_search_background_color"
        app:tint="@color/text_day_night_color"
        android:src="@drawable/play_button"
        app:layout_constraintEnd_toStartOf="@id/like_button"
        app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
        app:layout_constraintBottom_toTopOf="@id/time_fragment_textview" />

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like_button"
        android:background="@color/settings_search_background_color"
        android:layout_marginBottom="@dimen/_29dp"
        app:layout_constraintBottom_toTopOf="@id/time_fragment_textview"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline" />

    <TextView
        android:id="@+id/time_fragment_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_39dp"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/duration_text_view"
        android:textSize="@dimen/_14sp"
        android:textColor="@color/text_day_night_color"
        tools:text="0:30" />

    <!--Левые нижние текствью-->

    <TextView
        android:id="@+id/duration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_marginBottom="@dimen/_17dp"
        app:layout_constraintStart_toStartOf="@id/country_text_view"
        app:layout_constraintBottom_toTopOf="@id/album_text_view"
        style="@style/TextStyleOneOnPlaylistActivity"/>

    <TextView
        android:id="@+id/album_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:layout_marginBottom="@dimen/_17dp"
        app:layout_constraintStart_toStartOf="@id/country_text_view"
        app:layout_constraintBottom_toTopOf="@id/year_text_view"
        style="@style/TextStyleOneOnPlaylistActivity"/>

    <TextView
        android:id="@+id/year_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:layout_marginBottom="@dimen/_17dp"
        app:layout_constraintStart_toStartOf="@id/country_text_view"
        app:layout_constraintBottom_toTopOf="@id/genre_text_view"
        style="@style/TextStyleOneOnPlaylistActivity"/>

    <TextView
        android:id="@+id/genre_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:layout_marginBottom="@dimen/_17dp"
        app:layout_constraintStart_toStartOf="@id/country_text_view"
        app:layout_constraintBottom_toTopOf="@id/country_text_view"
        style="@style/TextStyleOneOnPlaylistActivity"/>

    <TextView
        android:id="@+id/country_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:layout_marginStart="@dimen/padding_16dp"
        android:layout_marginBottom="@dimen/padding_28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextStyleOneOnPlaylistActivity"
        />

    <!--Правые нижние текствью-->

    <TextView
        android:id="@+id/duration_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/duration_value"
        android:layout_marginEnd="@dimen/padding_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/duration_text_view"
        app:layout_constraintBottom_toBottomOf="@id/duration_text_view"
        style="@style/TextStyleTwoOnPlaylistActivity"/>

    <TextView
        android:id="@+id/album_value_text_view"
        style="@style/TextStyleTwoOnPlaylistActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16dp"
        android:text="@string/album_value"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@id/album_text_view"
        app:layout_constraintEnd_toEndOf="@id/duration_value_text_view"
        app:layout_constraintStart_toEndOf="@+id/album_text_view"
        app:layout_constraintBottom_toBottomOf="@id/album_text_view"/>

    <TextView
        android:id="@+id/year_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintEnd_toEndOf="@id/duration_value_text_view"
        app:layout_constraintTop_toTopOf="@id/year_text_view"
        app:layout_constraintBottom_toBottomOf="@id/year_text_view"
        style="@style/TextStyleTwoOnPlaylistActivity"/>

    <TextView
        android:id="@+id/genre_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintEnd_toEndOf="@id/duration_value_text_view"
        app:layout_constraintTop_toTopOf="@id/genre_text_view"
        app:layout_constraintBottom_toBottomOf="@id/genre_text_view"
        style="@style/TextStyleTwoOnPlaylistActivity"/>

    <TextView
        android:id="@+id/country_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintEnd_toEndOf="@id/duration_value_text_view"
        app:layout_constraintTop_toTopOf="@id/country_text_view"
        app:layout_constraintBottom_toBottomOf="@id/country_text_view"
        style="@style/TextStyleTwoOnPlaylistActivity"
        />

</androidx.constraintlayout.widget.ConstraintLayout>